; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_aam_word.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_aam_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@F_CF = common dso_local global i32 0, align 4
@F_AF = common dso_local global i32 0, align 4
@F_OF = common dso_local global i32 0, align 4
@F_SF = common dso_local global i32 0, align 4
@F_ZF = common dso_local global i32 0, align 4
@F_PF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86emu*, i32)* @aam_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aam_word(%struct.x86emu* %0, i32 %1) #0 {
  %3 = alloca %struct.x86emu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sdiv i32 %7, 10
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = srem i32 %9, 10
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %5, align 4
  %12 = shl i32 %11, 8
  %13 = load i32, i32* %6, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* @F_CF, align 4
  %16 = call i32 @CLEAR_FLAG(i32 %15)
  %17 = load i32, i32* @F_AF, align 4
  %18 = call i32 @CLEAR_FLAG(i32 %17)
  %19 = load i32, i32* @F_OF, align 4
  %20 = call i32 @CLEAR_FLAG(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, 128
  %23 = load i32, i32* @F_SF, align 4
  %24 = call i32 @CONDITIONAL_SET_FLAG(i32 %22, i32 %23)
  %25 = load i32, i32* %6, align 4
  %26 = icmp eq i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = load i32, i32* @F_ZF, align 4
  %29 = call i32 @CONDITIONAL_SET_FLAG(i32 %27, i32 %28)
  %30 = load i32, i32* %6, align 4
  %31 = and i32 %30, 255
  %32 = call i32 @PARITY(i32 %31)
  %33 = load i32, i32* @F_PF, align 4
  %34 = call i32 @CONDITIONAL_SET_FLAG(i32 %32, i32 %33)
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @CLEAR_FLAG(i32) #1

declare dso_local i32 @CONDITIONAL_SET_FLAG(i32, i32) #1

declare dso_local i32 @PARITY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
